fix: pass ts and change mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
     <div id="app"></div>
+    <section id="toaster-wrapper" data-position="bottom-right" data-rich-colors="true"
+        data-remove-tid=100 />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
