--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EML-info</title>
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="EML-info" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
     <div id="app"></div>
-    <section id="toaster-wrapper" data-position="bottom-right" data-rich-colors="true"
-        data-remove-tid=100 />
+    <section
+      id="toaster-wrapper"
+      data-position="bottom-right"
+      data-rich-colors="true"
+      data-remove-tid="100"
+    />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
