fix: allow insecure for api ip

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="EML-info" />
     <link rel="manifest" href="/site.webmanifest" />
+
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
     <div id="app"></div>
