--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EML-info</title>
+    <title>EML-info #</title>
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -13,7 +13,6 @@
     <meta name="apple-mobile-web-app-title" content="EML-info" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   </head>
   <body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
     <div id="app"></div>
